<resources>
    <string name="app_name">Cautionem</string>
    <string name="title_activity_login">Connectez-vous</string>
    <string name="titre_activity_inscription">Créer votre compte</string>
    <string name="titre_activity_rejoindre">Rejoindre votre association</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_nom">Nom</string>
    <string name="prompt_prénom">Prénom</string>
    <string name="prompt_name">Nom de  l\'association</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="prompt_RIB">RIB</string>
    <string name="prompt_link">Insérer un lien</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="welcome">"Bienvenue !"</string>
    <string name="invalid_username">Nom utilisateur invalide</string>
    <string name="invalid_password">Le mot de passe doit contenir plus de 5 caractères</string>
    <string name="login_failed">"Erreur de connexion"</string>
    <string name="création">Crée</string>
    <string name="rejoindre">Rejoindre</string>
    <string name="p">Administrateur(e)</string>
    <string name="vp">Vice-Président(e)</string>
    <string name="t">Trésorier</string>
    <string name="com">Responsable communication</string>
    <string name="m">Membre</string>
    <string name="lien">Partager le lien</string>
    <string name="next">Suivant</string>
    <string name="join">Rejoindre</string>
    <string name="Upload">Charger une facture</string>
    <string name="F">Facture</string>
    <string name="pseudo_membre">Pseudo</string>
    <string name="default_role">Role</string>
    <string name="Creer_PDF">Créer PDF</string>
    <string name="Charger_PDF">Charger PDF</string>
    <string name="Entrer_texte">Entrez votre texte</string>
    <string name="default_nom_asso">Asso0</string>
    <string name="profil1">Votre profil</string>
    <string name="profil2">Choisissez votre image de profil</string>
    <string name="info">A propos</string>
    <string name="todo">TODO</string>
    <string name="nom_de_l_association">Nom de l\'association</string>
    <string name="JOC">Créer ou rejoindre</string>
    <string name="nom_facture">Nom facture</string>
    <string name="telecharger">Télécharger</string>
    <string name="save">Enregistrer</string>
    <string name="nomutilisateur">Nom de l\'utilisateur</string>
    <string name="motdepasse">Mot de passe</string>
    <string name="compte">Données du compte</string>

    <string name="hyperlink"><a href="https://cautionem.page.link/signIn">Test</a></string>
</resources>