<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="#0B2FF4"
        app:cardCornerRadius="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            app:cardCornerRadius="250dp">

            <ImageView
                android:id="@+id/icon_membre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_lambda_profile"
                android:contentDescription="@string/todo" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_margin="23dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/role_membre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_role"/>

        <TextView
            android:layout_marginLeft="50dp"
            android:id="@+id/pseudo_membre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pseudo_membre"
            android:layout_toRightOf="@id/role_membre"/>


    </RelativeLayout>


</LinearLayout>