<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="viewEnd"
    tools:context=".SuiviActivity">

    <Button
        android:id="@+id/nextbut5"
        android:layout_width="371dp"
        android:layout_height="60dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="@color/rouge_c"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_vertical"
        android:text="@string/m"
        android:textColor="#616161"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titreAssoNom" />

    <Button
        android:id="@+id/nextbut6"
        android:layout_width="371dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/rouge_f"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_vertical"
        android:text="@string/info"
        android:textColor="@color/blanc"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextbut7" />

    <Button
        android:id="@+id/nextbut7"
        android:layout_width="371dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/rouge_c"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_vertical"
        android:text="@string/F"
        android:textColor="#616161"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextbut5" />

    <TextView
        android:id="@+id/titreAssoNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/default_nom_asso"
        android:textColor="#100F0F"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="142dp"
        android:layout_height="153dp"
        app:layout_constraintBottom_toTopOf="@+id/nextbut5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titreAssoNom"
        app:srcCompat="@drawable/images"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>